--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,11 +7,11 @@
     "moduleResolution": "bundler",
     "baseUrl": ".",
     "paths": {
-      "~/*": ["src/*"]
+      "~/*": ["src/*"],
+      "@/*": ["src/*"]
     },
     "types": [
       "vite/client",
-      "vite-plugin-pages/client",
       "unplugin-vue-macros/macros-global"
     ],
     "resolveJsonModule": true,
