将 Ant Design Vue 换成 Element Plus

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
     },
     "types": [
       "vite/client",
-      "unplugin-vue-macros/macros-global"
+      "unplugin-vue-macros/macros-global",
+      "element-plus/global"
     ],
     "resolveJsonModule": true,
     "allowJs": true,
