--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^10.4.1",
-    "ant-design-vue": "4.x",
+    "element-plus": "^2.3.14",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
