feat: login 增加 动画和打字机效果

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,10 +4,9 @@
     "lib": ["DOM", "ESNext"],
     "jsx": "preserve",
     "module": "ESNext",
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
     "baseUrl": ".",
     "paths": {
-      "~/*": ["src/*"],
       "@/*": ["src/*"]
     },
     "types": [
