--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   },
   "dependencies": {
     "@vueuse/core": "^10.4.1",
+    "@vueuse/motion": "^2.0.0",
     "element-plus": "^2.3.14",
+    "typeit": "^8.7.1",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
