--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
   "devDependencies": {
     "@antfu/eslint-config": "^1.0.0-beta.6",
     "@iconify-json/carbon": "^1.1.21",
+    "@iconify-json/line-md": "^1.1.29",
     "@types/node": "^20.6.3",
     "@unocss/eslint-config": "^0.56.1",
     "@unocss/eslint-plugin": "^0.56.1",
     "@unocss/reset": "^0.56.1",
+    "@unocss/transformer-directives": "^0.56.4",
     "@vitejs/plugin-vue": "^4.3.4",
     "@vue-macros/volar": "^0.14.3",
     "@vue/test-utils": "^2.4.1",
@@ -35,6 +37,8 @@
     "jsdom": "^22.1.0",
     "lint-staged": "^14.0.1",
     "pnpm": "^8.7.6",
+    "sass": "^1.68.0",
+    "sass-loader": "^13.3.2",
     "simple-git-hooks": "^2.9.0",
     "taze": "^0.11.2",
     "typescript": "^5.2.2",
