--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "preview": "vite preview",
     "test": "vitest",
     "up": "taze major -I",
-    "postinstall": "npx simple-git-hooks",
-    "preinstall": "npx only-allow pnpm"
+    "preinstall": "npx only-allow pnpm",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@vueuse/core": "^10.4.1",
@@ -33,12 +33,13 @@
     "@vue/test-utils": "^2.4.1",
     "eslint": "^8.50.0",
     "eslint-define-config": "^1.23.0",
+    "husky": "^8.0.0",
+    "husky-init": "^8.0.0",
     "jsdom": "^22.1.0",
     "lint-staged": "^14.0.1",
     "pnpm": "^8.7.6",
     "sass": "^1.68.0",
     "sass-loader": "^13.3.2",
-    "simple-git-hooks": "^2.9.0",
     "taze": "^0.11.2",
     "typescript": "^5.2.2",
     "unocss": "^0.56.1",
@@ -48,9 +49,6 @@
     "vite": "^4.4.9",
     "vitest": "^0.34.5",
     "vue-tsc": "^1.8.13"
-  },
-  "simple-git-hooks": {
-    "pre-commit": "pnpm lint-staged"
   },
   "lint-staged": {
     "*": "eslint --fix"
