--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "scripts": {
     "build": "vite build",
     "dev": "vite --port 3333 --open",
-    "lint": "eslint .",
+    "lint": "eslint --cache --max-warnings 0  \"{src,mock,build}/**/*.{vue,js,ts,tsx}\" --fix",
     "typecheck": "vue-tsc --noEmit",
     "preview": "vite preview",
     "test": "vitest",
     "up": "taze major -I",
-    "preinstall": "npx only-allow pnpm",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "preinstall": "npx only-allow pnpm"
   },
   "dependencies": {
     "@vueuse/core": "^10.4.1",
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^1.0.0-beta.6",
+    "@commitlint/config-conventional": "^18.1.0",
     "@iconify-json/carbon": "^1.1.21",
     "@types/node": "^20.6.3",
     "@unocss/eslint-config": "^0.56.1",
@@ -31,6 +32,7 @@
     "@vitejs/plugin-vue": "^4.3.4",
     "@vue-macros/volar": "^0.14.3",
     "@vue/test-utils": "^2.4.1",
+    "commitlint": "^18.2.0",
     "eslint": "^8.50.0",
     "eslint-define-config": "^1.23.0",
     "husky": "^8.0.0",
@@ -49,8 +51,5 @@
     "vite": "^4.4.9",
     "vitest": "^0.34.5",
     "vue-tsc": "^1.8.13"
-  },
-  "lint-staged": {
-    "*": "eslint --fix"
   }
 }
