--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,8 @@
 # 资源公共路径,需要以 /开头和结尾
 VITE_PUBLIC_PATH='/'
 
-VITE_APP_BASE_URL=""
+# base api
+VITE_APP_BASE_API='/api'
+
+# test base api
+VITE_APP_BASE_API_TEST='/api-test'
