--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@vueuse/core": "^10.4.1",
     "@vueuse/motion": "^2.0.0",
+    "axios": "^1.6.0",
     "element-plus": "^2.3.14",
     "typeit": "^8.7.1",
     "vue": "^3.3.4",
