--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "husky-init": "^8.0.0",
     "jsdom": "^22.1.0",
     "lint-staged": "^14.0.1",
+    "mockjs": "^1.1.0",
     "pnpm": "^8.7.6",
     "rimraf": "^5.0.5",
     "rollup-plugin-visualizer": "^5.9.2",
@@ -59,6 +60,7 @@
     "unplugin-vue-components": "^0.25.2",
     "unplugin-vue-macros": "^2.5.1",
     "vite": "^4.4.9",
+    "vite-plugin-mock": "2.9.6",
     "vitest": "^0.34.5",
     "vue-tsc": "^1.8.13"
   }
