--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@vueuse/motion": "^2.0.0",
     "axios": "^1.6.0",
     "element-plus": "^2.3.14",
+    "nprogress": "^0.2.0",
     "typeit": "^8.7.1",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
@@ -34,6 +35,7 @@
     "@commitlint/config-conventional": "^18.1.0",
     "@iconify-json/carbon": "^1.1.21",
     "@types/node": "^20.6.3",
+    "@types/nprogress": "^0.2.2",
     "@unocss/eslint-config": "^0.56.1",
     "@unocss/eslint-plugin": "^0.56.1",
     "@unocss/reset": "^0.56.1",
