feat: 线上添加 mock 接口

--- a/.env.development
+++ b/.env.development
@@ -6,3 +6,9 @@ VITE_APP_BASE_API='/api'
 
 # test base api
 VITE_APP_BASE_API_TEST='/api-test'
+
+# 是否使用mock
+VITE_APP_USE_MOCK=true
+
+# 是否使用代理
+VITE_USE_PROXY=true
