--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,8 @@
 # 线上环境平台打包路径
 VITE_PUBLIC_PATH=/
 
+VITE_APP_TITLE='SKYADMIN'
+
 # 线上环境路由历史模式（Hash模式传"hash"、HTML5模式传"h5"、Hash模式带base参数传"hash,base参数"、HTML5模式带base参数传"h5,base参数"）
 VITE_ROUTER_HISTORY="hash"
 
@@ -11,4 +13,12 @@ VITE_CDN=false
 # 压缩时不删除原始文件的配置：gzip、brotli、both（同时开启 gzip 与 brotli 压缩）、none（不开启压缩，默认）
 # 压缩时删除原始文件的配置：gzip-clear、brotli-clear、both-clear（同时开启 gzip 与 brotli 压缩）、none（不开启压缩，默认）
 VITE_COMPRESSION="none"
+
+# base api
 VITE_APP_BASE_API='/api'
+
+# 是否使用mock
+VITE_APP_USE_MOCK=true
+
+# 是否使用代理
+VITE_USE_PROXY=true
