--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "unplugin-vue-components": "^0.25.2",
     "unplugin-vue-macros": "^2.5.1",
     "vite": "^4.4.9",
+    "vite-plugin-compression": "^0.5.1",
     "vite-plugin-mock": "2.9.6",
     "vitest": "^0.34.5",
     "vue-tsc": "^1.8.13"
