--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "vite": "^4.4.9",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-mock": "2.9.6",
+    "vite-plugin-svg-icons": "^2.0.1",
     "vitest": "^0.34.5",
     "vue-tsc": "^1.8.13"
   }
